--- a/app/globals.css
+++ b/app/globals.css
@@ -6,6 +6,10 @@ body {
   font-family: Arial, Helvetica, sans-serif;
   max-width: 100%;
   overflow-x: hidden;
+  padding: 0 !important;
+  margin: 0 !important;
+  padding-bottom: 0 !important;
+  padding-top: 0 !important;
 }
 
 /* Utilidades personalizadas */
